--- a/trunk/EasyMidas/EasyMidas.csproj
+++ b/trunk/EasyMidas/EasyMidas.csproj
@@ -48,6 +48,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CheckSteelBeam.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CheckSteelBeam.Designer.cs">
+      <DependentUpon>CheckSteelBeam.cs</DependentUpon>
+    </Compile>
     <Compile Include="ChildForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -62,6 +68,10 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="CheckSteelBeam.resx">
+      <DependentUpon>CheckSteelBeam.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="ChildForm.resx">
       <DependentUpon>ChildForm.cs</DependentUpon>
       <SubType>Designer</SubType>
