--- a/trunk/EasyMidas/EasyMidas.csproj
+++ b/trunk/EasyMidas/EasyMidas.csproj
@@ -60,6 +60,7 @@
     <Compile Include="ChildForm.Designer.cs">
       <DependentUpon>ChildForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="SerializerProgress.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
