--- a/trunk/MidasGenModel/MidasGenModel.csproj
+++ b/trunk/MidasGenModel/MidasGenModel.csproj
@@ -64,8 +64,10 @@
   <ItemGroup>
     <Compile Include="ClassLib.cs" />
     <Compile Include="CodeCheck.cs" />
+    <Compile Include="Geometry3d.cs" />
     <Compile Include="model.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tools.cs" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
